--- a/app/package.json
+++ b/app/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.4"
+    "next": "14.1.4",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.14.15"
   },
   "devDependencies": {
     "typescript": "^5",
