--- a/app/package.json
+++ b/app/package.json
@@ -11,9 +11,15 @@
   "dependencies": {
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.4",
+    "next": "^14.1.4",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.16",
-    "@mui/material": "^5.14.15"
+    "@mui/material": "^5.14.15",
+    "react-loading-skeleton": "^3.4.0",
+    "styled-components": "^6.1.1",
+    "react-toastify": "^9.1.3",
+    "react-tag-input-component": "^2.0.2"
   },
   "devDependencies": {
     "typescript": "^5",
