--- a/app/package.json
+++ b/app/package.json
@@ -19,7 +19,8 @@
     "react-loading-skeleton": "^3.4.0",
     "styled-components": "^6.1.1",
     "react-toastify": "^9.1.3",
-    "react-tag-input-component": "^2.0.2"
+    "react-tag-input-component": "^2.0.2",
+    "axios": "^0.25.0"
   },
   "devDependencies": {
     "typescript": "^5",
