--- a/.env.dist
+++ b/.env.dist
@@ -1,13 +1,12 @@
-APP_NAME=saasapismanagerclient
+APP_NAME=saasgithubonepoint
 APP_ENV=local
 PROJECT_NAME=saas
-SERVICE_NAME=apismanagerclient
-APP_NETWORK=saas_apismanager_network
+SERVICE_NAME=githubonepoint
+APP_NETWORK=saas_githubonepoint_network
 PROXY_NETWORK=api_gateway_network
 API_VERSION=1.0
-HOST=saas.localhost
+HOST=githubonepoint.localhost
 
-APISMANAGER_API_URL=https://saas.localhost
-PUBLIC_URL=/apismanager
-NEXT_PUBLIC_URL=/apismanager
+PUBLIC_URL=
+NEXT_PUBLIC_URL=
 NEXT_PUBLIC_PUBLIC_SERVICE_TITLE="Single Page Application Template"
