add api adapter. add login request

--- a/.env.dist
+++ b/.env.dist
@@ -8,5 +8,6 @@ API_VERSION=1.0
 HOST=githubonepoint.localhost
 
 PUBLIC_URL=
+NEXT_PUBLIC_API_URL=
 NEXT_PUBLIC_URL=
 NEXT_PUBLIC_PUBLIC_SERVICE_TITLE="Single Page Application Template"
